@@ -45,7 +45,7 @@ Swift_DependencyContainer::getInstance()
 
     ->register('transport.smtphandlers')
     ->asArray()
-    ->withDependencies(['transport.authhandler', 'transport.smtputf8handler'])
+    ->withDependencies(['transport.authhandler'])
 
     ->register('transport.authhandler')
     ->asNewInstanceOf('Swift_Transport_Esmtp_AuthHandler')
@@ -63,6 +63,10 @@ Swift_DependencyContainer::getInstance()
 
     ->register('transport.smtputf8handler')
     ->asNewInstanceOf('Swift_Transport_Esmtp_SmtpUtf8Handler')
+
+    ->register('transport.8bitmimehandler')
+    ->asNewInstanceOf('Swift_Transport_Esmtp_EightBitMimeHandler')
+    ->addConstructorValue('8BITMIME')
 
     ->register('transport.crammd5auth')
     ->asNewInstanceOf('Swift_Transport_Esmtp_Auth_CramMd5Authenticator')
